--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "s3"
   ],
   "author": "Tony Majestro",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tonymajestro/s3sh.git"
+  },
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.490.0"
