--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "s3sh",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Shell utility for exploring and manipulating S3 files.",
   "bin": "./src/s3sh",
+  "main": "./src/s3sh",
   "keywords": [
     "shell",
     "aws",
     "s3"
   ],
+  "scripts": {
+    "start": "npx ."
+  },
   "author": "Tony Majestro",
   "repository": {
     "type": "git",
