--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,7 @@
 {
+  "extends": "@tsconfig/node20/tsconfig.json",
   "compilerOptions": {
-    "outDir": "./build",
-    "allowJs": true,
-    "target": "es5"
+    "outDir": "./build"
   },
   "include": ["./src/**/*"]
 }
